configure PITest for Java 17 and define target packages